# vibetube

./: .gitignore  LICENSE  README.md  compose.yml
vibetube_backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
vibetube_backend/app/: avatar_generater.py  database.py  database_models.py  init_db.py  jwt_config.py  main.py  pydantic_models.py
vibetube_backend/app/config/: app_setup.py  jwt_config.py  supabase_config.py
vibetube_backend/app/constants/: app_constants.py  supabase_constants.py
vibetube_backend/app/models/: database_models.py
vibetube_backend/app/routers/: main_router.py
vibetube_backend/app/routers/auth/: auth_router.py
vibetube_backend/app/routers/auth/controller/: login_controller.py  register_controller.py  verify_token_controller.py
vibetube_backend/app/routers/comments/: comments_router.py
vibetube_backend/app/routers/comments/controller/: create_comment.py  get_comments.py
vibetube_backend/app/routers/likes/: likes_router.py
vibetube_backend/app/routers/likes/controller/: get_likes_count.py  like_video.py
vibetube_backend/app/routers/subscribers/: subscriber_router.py
vibetube_backend/app/routers/subscribers/controller/: get_subscribers.py  subscribe_channel.py
vibetube_backend/app/routers/users/: user_router.py
vibetube_backend/app/routers/users/controller/: channel_details.py  more_channel_details.py  (+1 more)
vibetube_backend/app/routers/videos/: videos_router.py
vibetube_backend/app/schemas/: pydantic_models.py
vibetube_backend/app/utils/: avatar_generater.py  avatar_utils.py  password_utils.py  videos.py
(+47 files in other folders)
